--- a/5_Service/practice/echo.yml
+++ b/5_Service/practice/echo.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: echo
-          image: ghrc.io/subicura/echo:v1
+          image: ghcr.io/subicura/echo:v1
 
 ---
 
